--- a/index.html
+++ b/index.html
@@ -127,18 +127,23 @@
                 <div class="text__table">
                     <table>
                         <tr>
-                            <td>Cell 1</td>
-                            <td>Cell 1</td>
-                            <td>Cell 1</td>
-                        </tr>
-                        <tr>
-                            <td>Cell 1</td>
-                            <td>Cell 1</td>
+                            <td>Mystake est un casino😊</td>
+                            <td>Casino Intense comprend l’importance du jeu mobile dans le monde numérique d’aujourd’hui. C’est pourquoi ils ont optimisé leur site pour une utilisation mobile, permettant aux joueurs de profiter de leurs jeux de casino préférés où qu’ils soient et à tout moment. Qu’il s’agisse d’un smartphone ou d’une tablette, les joueurs peuvent se connecter à leur compte Casino Intense et commencer à jouer en quelques clics.</td>
                             <td>Cell 1</td>
                         </tr>
                         <tr>
+                            <td>Mystake est un casino😊</td>
+                            <td>Casino Intense comprend l’importance du jeu mobile dans le monde numérique d’aujourd’hui. C’est pourquoi ils ont optimisé leur site pour une utilisation mobile, permettant aux joueurs de profiter de leurs jeux de casino préférés où qu’ils soient et à tout moment. Qu’il s’agisse d’un smartphone ou d’une tablette, les joueurs peuvent se connecter à leur compte Casino Intense et commencer à jouer en quelques clics.</td>
                             <td>Cell 1</td>
+                        </tr>
+                        <tr>
+                            <td>Mystake est un casino😊</td>
+                            <td>Casino Intense comprend l’importance du jeu mobile dans le monde numérique d’aujourd’hui. C’est pourquoi ils ont optimisé leur site pour une utilisation mobile, permettant aux joueurs de profiter de leurs jeux de casino préférés où qu’ils soient et à tout moment. Qu’il s’agisse d’un smartphone ou d’une tablette, les joueurs peuvent se connecter à leur compte Casino Intense et commencer à jouer en quelques clics.</td>
                             <td>Cell 1</td>
+                        </tr>
+                        <tr>
+                            <td>Mystake est un casino😊</td>
+                            <td>Casino Intense comprend l’importance du jeu mobile dans le monde numérique d’aujourd’hui. C’est pourquoi ils ont optimisé leur site pour une utilisation mobile, permettant aux joueurs de profiter de leurs jeux de casino préférés où qu’ils soient et à tout moment. Qu’il s’agisse d’un smartphone ou d’une tablette, les joueurs peuvent se connecter à leur compte Casino Intense et commencer à jouer en quelques clics.</td>
                             <td>Cell 1</td>
                         </tr>
                     </table>
