--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="slot__items">
                     <div class="slot__item">
                         <div>
-                            <img src="./img/slot/la-fiesta-de-muertos.png"  alt="img" class="slot__item-img">
+                            <img src="./img/slot/la-fiesta-de-muertos.webp"  alt="img" class="slot__item-img">
                         </div>
                         <h4 class="slot__item-title">La fiesta de Muertos</h4>
                         <p class="slot__item-content">Jeu au design de la fête des morts, célèbre aux Mexique.</p>
@@ -72,7 +72,7 @@
                     </div>
                     <div class="slot__item">
                         <div>
-                            <img src="./img/slot/mystery-kingdom.png"  alt="img" class="slot__item-img">
+                            <img src="./img/slot/mystery-kingdom.webp"  alt="img" class="slot__item-img">
                         </div>
                         <h4 class="slot__item-title">Mystery Kingdom</h4>
                         <p class="slot__item-content">4 rouleaux, alignez les cloches pour gagner le jackpot !</p>
@@ -82,7 +82,7 @@
                     </div>
                     <div class="slot__item">
                         <div>
-                            <img src="./img/slot/riot.png"  alt="img" class="slot__item-img">
+                            <img src="./img/slot/riot.webp"  alt="img" class="slot__item-img">
                         </div>
                         <h4 class="slot__item-title">Riot</h4>
                         <p class="slot__item-content">Embarquez en pleine émeute pour tenter de gagner gros.</p>
@@ -119,7 +119,7 @@
                 <h3 class="text__title-h3">Mystake Casino : présentation</h3>
                 <p class="text__content">Mystake est un casino cryptomonnaie en ligne. Il permet à tous ses clients de jouer directement en bitcoin, ethereum et bien d’autres crypto-monnaies. Tous les gains sont récupérables de manière rapide sécurisée et fiable. Rejoignez l’aventure Mystake avec plusieurs millions de joueurs déjà présents. Pour jouer sur Mystake il suffit de se rendre sur mystake.com.  Mystake est disponible dans de nombreuses langues avec notamment le français, l’anglais, l’espagnol, l’italien, l’allemand, le russe, le suédois, le finlandais et le portugais brésilien.</p>
                 <div class="text-btn">
-                    <img src="./img/picture.png" alt="bonus" class="text__img">
+                    <img src="./img/picture.webp" alt="bonus" class="text__img">
                 </div>
             </div>
             <div class="text__box">
